# Code

./: MANIFEST  README.md  regr_scalper.ts  setup.cfg
CNDL/: ir_hist.ts  trend_c.ts  zz_1.ts
PSAR/: B_cand.ts  W_cand.ts  dub_emaed.ts  macd_r.ts  mpsar.ts
