[metadata]
name = F-BLOG
version = 1.0.0
license = BSD-3-Clause
maintainer = jinoyparekh
maintainer_email = jinpar@outlook.com
description = The F-Blog app built with Flask
long_description = file: README.md
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    F-Blog
